force-app/main/default/objects/AI_Provider_Settings__mdt/AI_Provider_Settings__mdt.object-meta.xml
<CustomObject>
  <label>AI Provider Settings</label>
  <pluralLabel>AI Provider Settings</pluralLabel>
  <nameField>
    <type>Text</type>
    <label>Provider Settings Name</label>
  </nameField>
</CustomObject>