force-app/main/default/objects/AI_Provider_Settings__mdt/fields/Authentication_Type__c.field-meta.xml
<CustomField>
  <fullName>Authentication_Type__c</fullName>
  <label>Authentication Type</label>
  <type>Text</type>
  <length>100</length>
</CustomField>