force-app/main/default/objects/AI_Provider_Settings__mdt/fields/Max_Batch_Size__c.field-meta.xml
<CustomField>
  <fullName>Max_Batch_Size__c</fullName>
  <label>Max Batch Size</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>0</scale>
</CustomField>