force-app/main/default/objects/AI_Provider_Settings__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
  <fullName>Named_Credential__c</fullName>
  <label>Named Credential</label>
  <type>Text</type>
  <length>255</length>
</CustomField>