force-app/main/default/objects/AI_Provider_Settings__mdt/fields/Provider_Name__c.field-meta.xml
<CustomField>
  <fullName>Provider_Name__c</fullName>
  <label>Provider Name</label>
  <type>Text</type>
  <length>255</length>
</CustomField>